[gd_scene load_steps=26 format=3 uid="uid://ch3n0ojp3lriq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_whyrc"]
[ext_resource type="Texture2D" uid="uid://bpxwpwvhiumf6" path="res://assets/hook.png" id="3_3fudx"]
[ext_resource type="PackedScene" uid="uid://d0gipwh1a7em8" path="res://scenes/game_ui.tscn" id="3_jx5cs"]
[ext_resource type="Texture2D" uid="uid://dg5es4i6k1ame" path="res://assets/Shoot.png" id="4_udesi"]
[ext_resource type="Texture2D" uid="uid://c5y1t12esdu1m" path="res://assets/ropeTexture.png" id="5_x3i1i"]
[ext_resource type="PackedScene" uid="uid://bf4rowng3pqwi" path="res://scenes/hook.tscn" id="5_yfdsg"]
[ext_resource type="AudioStream" uid="uid://bad4q8hv0oln7" path="res://assets/541975__16bitstudios__grappling-hook.wav" id="7_h52yp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x2xq1"]
atlas = ExtResource("4_udesi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avvq"]
atlas = ExtResource("4_udesi")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0gd"]
atlas = ExtResource("4_udesi")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8np2y"]
atlas = ExtResource("4_udesi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjlbb"]
atlas = ExtResource("4_udesi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n46xa"]
atlas = ExtResource("4_udesi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo673"]
atlas = ExtResource("4_udesi")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67sty"]
atlas = ExtResource("4_udesi")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr0ix"]
atlas = ExtResource("4_udesi")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7txdf"]
atlas = ExtResource("4_udesi")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yycjm"]
atlas = ExtResource("4_udesi")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbius"]
atlas = ExtResource("4_udesi")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhyhx"]
atlas = ExtResource("4_udesi")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onanu"]
atlas = ExtResource("4_udesi")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wlki"]
atlas = ExtResource("4_udesi")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d8qc6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2xq1")
}],
"loop": false,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avvq")
}],
"loop": false,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0gd")
}],
"loop": false,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8np2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjlbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n46xa")
}],
"loop": false,
"name": &"shoot_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo673")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67sty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr0ix")
}],
"loop": false,
"name": &"shoot_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7txdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yycjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbius")
}],
"loop": false,
"name": &"shoot_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhyhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onanu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wlki")
}],
"loop": false,
"name": &"shoot_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uahj8"]
size = Vector2(124, 124)

[sub_resource type="CircleShape2D" id="CircleShape2D_644ay"]
radius = 400.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("upgrade_window", "mouse_icon", "animated_sprite") groups=["Player"]]
process_mode = 1
collision_mask = 12
script = ExtResource("1_whyrc")
base_grapple_amount_used = 1
grapple_use_gain_amount = 5
upgrade_window = NodePath("Game UI")
hook = ExtResource("5_yfdsg")
mouse_icon = NodePath("MouseIcon")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_d8qc6")
animation = &"idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uahj8")

[node name="ReachRange" type="Area2D" parent="."]
collision_mask = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReachRange"]
shape = SubResource("CircleShape2D_644ay")

[node name="Game UI" parent="." instance=ExtResource("3_jx5cs")]

[node name="Line2D" type="Line2D" parent="."]
width = 200.0
texture = ExtResource("5_x3i1i")
texture_mode = 1

[node name="Node" type="Node" parent="."]

[node name="MouseIcon" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_3fudx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_h52yp")
attenuation = 1.86607
bus = &"SFX"

[connection signal="used_ability" from="." to="Game UI" method="_on_player_used_ability"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="ReachRange" to="." method="_on_reach_range_body_entered"]
[connection signal="body_exited" from="ReachRange" to="." method="_on_reach_range_body_exited"]
